--- a/models/faster_rcnn/installation.ipynb
+++ b/models/faster_rcnn/installation.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,6 +116,34 @@
     "CUDA_VERSION = torch.__version__.split(\"+\")[-1]\n",
     "print(\"torch: \", TORCH_VERSION, \"; cuda: \", CUDA_VERSION)\n",
     "print(\"detectron2:\", detectron2.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import detectron2\n",
+    "from detectron2.utils.logger import setup_logger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/dbs/Documents/mobile_ubiquitous_computing/Labmate/models/faster_rcnn\n"
+     ]
+    }
+   ],
+   "source": [
+    "p=os.getcwd()\n",
+    "print(p)"
    ]
   }
  ],
